Radio Tray 0.6.1 - 16/09/2010
=============================

* Added new translations and updated existing ones
* Fixed several small bugs
* Added sub-menus
* Improved configuration dialogs UI a little
* Fixed several problems with playlist parsers
* Added option to reload bookmarks
* Improved notification system
* Increased number of stations on the default bookmarks file


Radio Tray 0.6 - 11/06/2010
=============================

* Updated translations
* Added volume control by using the mouse scrollwheel and corresding information on the tooltip
* Added DBus interface
* Fixed several small bugs
* Added separators to radio menu
* Added support for playing directly by URL, via DBus
* Added XSPF playlist format support
* Added MPRIS support to DBus interface
* Added keyboard media keys support
* Added ASF playlist format
* Improved playlist decoding
* Added RAM playlist support
* Added configuration file


Radio Tray 0.5.1 - 11/04/2010
=============================

* Added contributed translation language files
* Improved gui feedback
* Several small fixes

Radio Tray 0.5 - 20/03/2010
===========================

* Fixed radiotray startup bugs, by reorganizing application structure
* Added translation support 

Radio Tray 0.4 - 16/02/2010
===========================

* Added radio sort operation
* Enhanced tooltip, now shows song information
* Improved playlist support


Radio Tray 0.3 - 30/01/2010
===========================

* Fixed support for apostrophes in radio names
* Fixed scrollbar issue
* Added support for M3U playlist format
* Added support for ASX,WAX and WVX playlist formats


Radio Tray 0.2 - 17/01/2010
===========================

* Added support for shoutcast/icecast playlists
* Added desktop entry file


Radio Tray 0.1 - 09/01/2010
===========================

* Initial release