@@ -1,8 +1,8 @@
 <bookmarks>
 <group name="root">
-    <group name="Jazz"><bookmark name="Smooth Jazz" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=948"/>
-<bookmark name="Cool Jazz" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=30773"/><bookmark name="Trumpet Jazz" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1377234"/></group><group name="Latin"><bookmark name="Tropical 100 Mix" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=873650"/><bookmark name="Onda Tropical" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=506392"/><bookmark name="Top Latino Radio" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=4998"/><bookmark name="Salsa Stream" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1272221"/><bookmark name="Full Cumbia" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=4328"/></group><group name="Classic Rock"><bookmark name="181.FM Classic Hits" url="http://sc-rly.181.fm:80/stream/1094"/><bookmark name=".977 Classic Rock" url="http://www.977music.com/tunein/web/classicrock.asx"/></group><group name="Classical"><bookmark name="KDFC" url="http://provisioning.streamtheworld.com/pls/KDFCFM.pls"/><bookmark name="Classic FM" url="http://media-ice.musicradio.com/ClassicFMMP3.m3u"/><bookmark name="WCPE" url="http://www.ibiblio.org/wcpe/wcpe.pls"/><bookmark name="CINEMIX" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1269306"/></group><group name="Pop / Rock"><bookmark name="Radio Paradise" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1354805"/>
-    <bookmark name=".977 The Hitz Channel" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1280356"/><bookmark name="Top 100 station" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=43257"/><bookmark name="Enjoy Station" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1377285"/><bookmark name="80s Sky.FM" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=7022"/>
+    <group name="Jazz"><bookmark name="Smooth Jazz" url="http://smoothjazz.com/streams/smoothjazz_128.pls"/>
+<bookmark name="Cool Jazz" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=30773"/><bookmark name="Trumpet Jazz" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1377234"/></group><group name="Latin"><bookmark name="Onda Tropical" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=506392"/><bookmark name="Top Latino Radio" url="http://online.radiodifusion.net:8020/listen.pls"/><bookmark name="Salsa Stream" url="http://listen.sky.fm/public3/salsa.pls"/></group><group name="Classic Rock"><bookmark name="181.FM Classic Hits" url="http://sc-rly.181.fm:80/stream/1094"/><bookmark name=".977 Classic Rock" url="http://www.977music.com/tunein/web/classicrock.asx"/></group><group name="Classical"><bookmark name="KDFC" url="http://provisioning.streamtheworld.com/pls/KDFCFM.pls"/><bookmark name="Classic FM" url="http://media-ice.musicradio.com/ClassicFMMP3.m3u"/><bookmark name="WCPE" url="http://www.ibiblio.org/wcpe/wcpe.pls"/><bookmark name="CINEMIX" url="http://cinemix.us/cine.asx"/></group><group name="Pop / Rock"><bookmark name="Radio Paradise" url="http://www.radioparadise.com/musiclinks/rp_128aac.m3u"/>
+    <bookmark name=".977 The Hitz Channel" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1280356"/><bookmark name="Enjoy Station" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1377285"/><bookmark name="80s Sky.FM" url="http://listen.sky.fm/public3/the80s.pls"/>
     </group><group name="Oldies"><bookmark name="AM 1710" url="http://lin2.ash.fast-serv.com:9022/listen.pls"/><bookmark name="WNAR" url="http://live.wnar-am.com:8500/listen.pls"/></group><group name="Chill"><bookmark name="Groove Salad" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1325107"/>
-    <bookmark name="181.FM" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1275050"/><bookmark name="Lounge Radio" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1288934"/></group></group>
+    <bookmark name="181.FM" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1275050"/><bookmark name="Lounge Radio" url="http://yp.shoutcast.com/sbin/tunein-station.pls?id=1288934"/></group>
 </bookmarks>
